--- a/index.html
+++ b/index.html
@@ -4,192 +4,215 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Food Finder</title>
+    <title>Welcome to Food Finder</title>
     <style>
         body {
-            background-image: url('https://img.freepik.com/free-photo/top-view-fresh-vegetables-with-seasonings-eggs-cheese-dark-blue-desk_140725-50879.jpg?t=st=1736595975~exp=1736599575~hmac=203be62b8c961597e1ae0fade8ea08ee9c02ee5e4baac999073c6724dbc76730&w=996');
             font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-            font-size: 16px;
-            line-height: 1.5;
             margin: 0;
-            padding: 0;    
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            height: 100vh;
+            overflow: hidden;
+            animation: fadeInBackground 2s ease-out;
+            background-image: url('https://img.freepik.com/free-photo/grunge-paper-background_1048-10791.jpg?t=st=1736605365~exp=1736608965~hmac=36676a0c9e0db572418a331b8b55da7b91caf4166744f1e99b502c7e628dc273&w=740');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            animation: moveBackground 20s linear infinite;
         }
 
-        header {
-            position: relative; /* Necessary for overlaying text over the image */
-            color: white;
-            text-align: center;
-            padding: 40px 20px;
-        }
-
-        header img {
-            width: 100%; /* Ensures the image covers the entire header */
-            height: 100%; /* Maintains aspect ratio */
-            position: absolute; /* Makes the image stay at the back */
-            top: 0;
-            left: 0;
-            z-index: -1; /* Keeps the image behind the text */
-            object-fit: cover; /* Ensures the image covers the area without distorting */
-            opacity: 0.90; /* Optional, reduces the opacity for a better text overlay effect */
-        }
-
-        h1 {
-            font-family: 'Courier New', Courier, monospace;
-            font-size: 40px;
-            font-weight: bold;
-            margin: 0;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Text shadow for readability */
-            padding: 10px; /* Adds padding around the text */
-            background-color: rgba(0, 0, 0, 0.699); /* Semi-transparent black background */
-            display: inline-block; /* Keeps the background only around the text */
+        /* Animation for moving the background */
+        @keyframes moveBackground {
+            0% {
+                background-position: 0 0;
+            }
+            100% {
+                background-position: 100% 100%;
+            }
         }
 
         .container {
-            max-width: 1200px; /* Optional: Add a maximum width for better control */
-            margin: 0 auto; /* Centers the content */
-            padding: 0 20px; /* Adds padding on both sides */
-        }
-
-        form {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            margin: 40px 0;
-        }
-
-        input[type="text"] {
-            background-color: #fff;
-            border: 2px solid #ccc;
+            text-align: center;
+            background-color: rgba(255, 255, 255, 0.8); /* Semi-transparent white background */
             border-radius: 8px;
-            font-size: 16px;
-            padding: 12px;
-            width: 300px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            padding: 40px;
+            width: 90%;
+            max-width: 800px;
+            opacity: 0;
+            transform: translateY(50px);
+            animation: fadeInUp 1s forwards;
+        }
+
+        /* Fade-in and slide-up animation for container */
+        @keyframes fadeInUp {
+            0% {
+                opacity: 0;
+                transform: translateY(50px);
+            }
+            100% {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        h1 {
+            font-size: 36px;
+            margin-bottom: 20px;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+            animation: fadeInText 1.5s ease-out;
+        }
+
+        /* Fade-in animation for the title */
+        @keyframes fadeInText {
+            0% {
+                opacity: 0;
+            }
+            100% {
+                opacity: 1;
+            }
+        }
+
+        p {
+            font-size: 18px;
+            margin-bottom: 30px;
+            opacity: 0;
+            animation: fadeInText 1.5s ease-out 0.5s forwards;
         }
 
         .btn {
-            cursor: pointer;
-        }
-
-        button[type="submit"] {
-            background-color: #007bff;
+            background-color: #d76b58; /* Soft red/orange */
+            color: #fff;
+            font-size: 18px;
+            padding: 12px 20px;
             border: none;
             border-radius: 8px;
-            color: #fff;
+            text-decoration: none;
+            display: inline-block;
             cursor: pointer;
-            font-size: 16px;
-            padding: 12px 20px;
             transition: background-color 0.2s;
+            opacity: 0;
+            animation: fadeInButton 1.5s ease-out 1s forwards;
         }
 
-        button[type="submit"]:hover {
-            background-color: #0069d9;
+        /* Fade-in animation for the button */
+        @keyframes fadeInButton {
+            0% {
+                opacity: 0;
+            }
+            100% {
+                opacity: 1;
+            }
         }
 
-        #results {
-            display: grid;
-            gap: 40px;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            margin: 40px 0;
+        .btn:hover {
+            background-color: #c4604f; /* Slightly darker red */
         }
 
-        #results > div {
-            background-color: #928484; /* Background color */
-            border: 8px solid transparent; /* Transparent border to apply the border-image */
-            border-image: url('https://img.freepik.com/premium-vector/seamless-pattern-with-fast-food-illustrations-pattern-element-poster-wrapping-paper-illustration_124137-677.jpg?w=826') 30 round; /* Image border */
-            border-radius: 8px; /* Rounded corners */
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Shadow effect */
+        .btn:active {
+            background-color: #a14b3e; /* Even darker red */
+        }
+
+        .btn-container {
+            margin-top: 20px;
+        }
+
+        /* Additional sections */
+        .features {
             display: flex;
-            flex-direction: column;
-            padding: 10px; /* Padding inside the div */
-        }
-
-        #results img {
-            border-radius: 8px;
-            margin-bottom: 20px;
-            object-fit: cover;
-            height: 200px;
+            justify-content: space-around;
+            margin-top: 50px;
             width: 100%;
+            animation: fadeInUp 1.5s ease-out;
         }
 
-        #results h3 {
-            color: #333;
+        .feature-card {
+            background-color: rgba(255, 255, 255, 0.8);
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+            text-align: center;
+            width: 30%;
+            opacity: 0;
+            transform: translateY(20px);
+            animation: fadeInUp 2s forwards;
+        }
+
+        .feature-card h3 {
             font-size: 24px;
-            margin: 0;
-        }
-
-        #results ul {
-            margin: 0;
-            padding: 0;
-        }
-
-        #results li {
-            list-style: none;
+            color: #4f3b2f;
             margin-bottom: 10px;
         }
 
-        #results a {
-            background-color: #274668;
-            border-radius: 8px;
-            color: #ffffff;
+        .feature-card p {
+            color: #6a4f3a;
             font-size: 16px;
-            padding: 12px 20px;
-            text-align: center;
-            text-decoration: none;
-            transition: background-color 0.2s;
         }
 
-        #results a:hover {
-            background-color: #0069d9;
+        .feature-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 10px 15px rgba(0, 0, 0, 0.2);
+        }
+
+        .faq {
+            text-align: center;
+            margin-top: 60px;
+        }
+
+        .faq h2 {
+            font-size: 32px;
+            margin-bottom: 20px;
+        }
+
+        .faq p {
+            font-size: 18px;
+            max-width: 600px;
+            margin: 0 auto;
+            color: #4f3b2f;
         }
     </style>
 </head>
 <body>
-    <header>
-        <img src="https://img.freepik.com/premium-vector/seamless-pattern-with-fast-food-illustrations-pattern-element-poster-wrapping-paper-illustration_124137-677.jpg?w=826">
-        <h1>Recipe Finder</h1>
-    </header>
     <div class="container">
-        <form>
-            <input type="text" id="search" placeholder="Enter ingredients, e.g., tomato, cheese">
-            <button type="submit" id="submit" class="btn">Search Recipes</button>
-        </form>
-        <div id="results">
-            <!-- Recipe results will appear here -->
+        <h1>Welcome to the Ultimate Cookbook</h1>
+        <p>Your go-to destination for discovering recipes based on ingredients you have at home.</p>
+        <div class="btn-container">
+            <a href="recipe_finder.html" class="btn">Start Searching Recipes</a>
         </div>
     </div>
 
-    <script>
-        const searchForm = document.querySelector('form');
-        const searchInput = document.querySelector('#search');
-        const resultsList = document.querySelector('#results');
+    <!-- Features Section -->
+    <div class="features">
+        <div class="feature-card">
+            <h3>Personalized Recipes</h3>
+            <p>Get recipe suggestions based on the ingredients you have in your kitchen.</p>
+        </div>
+        <div class="feature-card">
+            <h3>Save Your Favorites</h3>
+            <p>Bookmark your favorite recipes to access them anytime you like.</p>
+        </div>
+        <div class="feature-card">
+            <h3>Easy to Follow</h3>
+            <p>Step-by-step instructions to ensure your cooking journey is smooth and enjoyable.</p>
+        </div>
+    </div>
 
-        searchForm.addEventListener('submit', (e) => {
-            e.preventDefault();
-            searchRecipes();
-        });
+<!-- FAQ Section -->
+<div class="faq">
+    <h2>Frequently Asked Questions</h2>
+    <p>Do you have questions about how the site works? Here are some of the most common ones:</p>
+    <ul>
+        <li><strong>What are we?</strong> We are a platform designed to help you find delicious recipes based on the ingredients you already have at home. Our goal is to make cooking easier and more enjoyable by offering personalized recipe suggestions.</li>
+        <li><strong>How do I find recipes?</strong> Simply enter the ingredients you have, and we'll suggest some recipes for you!</li>
+        <li><strong>Can I save my favorite recipes?</strong> Yes, you can bookmark your favorite recipes for future reference.</li>
+        <li><strong>Are the recipes easy to follow?</strong> Absolutely! Each recipe comes with detailed, easy-to-follow instructions.</li>
+    </ul>
+</div>
 
-        async function searchRecipes() {
-            const searchValue = searchInput.value.trim();
-            const response = await fetch(`https://api.edamam.com/search?q=${searchValue}&app_id=7aa516a5&app_key=dc836a223fb788b11ae390504d9e97ce&from=0&to=10`);
-            const data = await response.json();
-            displayRecipes(data.hits);
-        }
 
-        function displayRecipes(recipes) {
-            let html = '';
-            recipes.forEach((recipe) => {
-                html += `
-                <div>
-                    <img src="${recipe.recipe.image}" alt="${recipe.recipe.label}">
-                    <h3>${recipe.recipe.label}</h3>
-                    <ul>
-                        ${recipe.recipe.ingredientLines.map(ingredient => `<li>${ingredient}</li>`).join('')}
-                    </ul>
-                    <a href="${recipe.recipe.url}" target="_blank">View Recipe</a>
-                </div>`;
-            });
-            resultsList.innerHTML = html;
-        }
-    </script>
 </body>
 </html>
