--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
             opacity: 0;
             transform: translateY(50px);
             animation: fadeInUp 1s forwards;
+            box-sizing: border-box; /* Ensures padding doesn't affect the overall width */
         }
 
         @keyframes fadeInUp {
@@ -123,6 +124,9 @@
             justify-content: space-between;
             margin-top: 50px;
             width: 100%;
+            padding-left: 20px;
+            padding-right: 20px;
+            box-sizing: border-box; /* Ensures padding doesn't affect the layout */
             animation: fadeInUp 1.5s ease-out;
         }
 
@@ -157,6 +161,9 @@
         .faq {
             text-align: center;
             margin-top: 60px;
+            padding-left: 20px;
+            padding-right: 20px;
+            box-sizing: border-box;
         }
 
         .faq h2 {
@@ -194,6 +201,8 @@
                 flex-direction: column;
                 align-items: center;
                 justify-content: center;
+                padding-left: 10px;
+                padding-right: 10px;
             }
 
             .feature-card {
@@ -203,6 +212,8 @@
 
             .faq {
                 margin-top: 30px;
+                padding-left: 15px;
+                padding-right: 15px;
             }
         }
 
@@ -223,6 +234,8 @@
 
             .features {
                 margin-top: 30px;
+                padding-left: 10px;
+                padding-right: 10px;
             }
         }
 
